--- a/roleta/index.html
+++ b/roleta/index.html
@@ -276,7 +276,7 @@
             document.getElementById('resgatar-premio').addEventListener('click', () => {
                 // Logic to redeem the prize
                 const queryParams = getQueryParams();
-                const baseUrl = 'casasbahiablackfriday.vercel.app/loja/index.html';
+                const baseUrl = 'https://casasbahiablackfriday.vercel.app/roleta/index.html';
                 const redirectUrl = queryParams ? `${baseUrl}?${queryParams}` : baseUrl;
                 window.location.href = redirectUrl;
             });
