--- a/roleta/loja/index.html
+++ b/roleta/loja/index.html
@@ -125,7 +125,7 @@
     </nav>
     <img src="images/2310_hotsite_blackfriday2023_01%281%29.png" style="width: 100%; margin-top: -2px;">
     <div class="bracelet-grid">
-      <div class="bracelet-item" onclick="window.location.href = '/loja/jbl/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Boombox 3'});">
+      <div class="bracelet-item" onclick="window.location.href = 'roleta/loja/jbl/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Boombox 3'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/poco_preto.png" style="height: 140px; width: auto;">
         </div>
@@ -145,7 +145,7 @@
             <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/samsung/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'Samsung The Freestyle Projetor Smart Portátil'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/samsung/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'Samsung The Freestyle Projetor Smart Portátil'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/1.jpg" style="height: 140px; width: auto;">
         </div>
@@ -165,7 +165,7 @@
 
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/jbl710/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Partybox 710'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/jbl710/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Partybox 710'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/poco_branco.png" style="height: 140px; width: auto;">
         </div>
@@ -183,7 +183,7 @@
           <p class="product-name">JBL Partybox 710 <span style="font-family: 'GellixBold';">Preta</span>
         </p></div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/poco/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Flip 6'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/poco/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Flip 6'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/x1.jpg" style="height: 140px; width: auto;">
         </div>
@@ -201,7 +201,7 @@
           <p class="product-name">Xiaome POCO X5 256GB <span style="font-family: 'GellixBold';">Blue</span>
         </p></div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/ferramentas/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'Apple Watch Series 9'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/ferramentas/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'Apple Watch Series 9'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/78c73f4b-fafb-4b43-b17f-3ac292f7b254.jpg" style="height: 140px; width: auto;">
         </div>
@@ -220,7 +220,7 @@
           </p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/iphone15/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/iphone15/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/iphone_15_pro_max_titanio_branco.jpg" style="height: 140px; width: auto;">
         </div>
@@ -239,7 +239,7 @@
           </p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/iphonerosa/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/iphonerosa/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/iphone_15_rosa.jpg" style="height: 140px; width: auto;">
         </div>
@@ -258,7 +258,7 @@
           </p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/iphoneblack/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro Max'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/iphoneblack/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro Max'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/iphone_15_pro_max_titanio_preto.jpg" style="height: 140px; width: auto;">
         </div>
@@ -277,7 +277,7 @@
           </p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/geladeira/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/geladeira/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/geladeira1.png" style="height: 140px; width: auto;">
         </div>
@@ -297,7 +297,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/escorredor/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/escorredor/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/Ttzhwy-Vmyt1j.webp" style="height: 140px; width: auto;">
         </div>
@@ -317,7 +317,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/iphonetitan/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/iphonetitan/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/iphone_15_pro_titanio.jpg" style="height: 140px; width: auto;">
         </div>
@@ -337,7 +337,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/tv/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/tv/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/w.webp" style="height: 140px; width: auto;">
         </div>
@@ -357,7 +357,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/panela/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/panela/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/p1.jpg" style="height: 140px; width: auto;">
         </div>
@@ -377,7 +377,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/ps5/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/ps5/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/p3.jpg" style="height: 140px; width: auto;">
         </div>
@@ -397,7 +397,7 @@
           <p></p>
         </div>
       </div>
-      <div class="bracelet-item" onclick="window.location.href='/loja/micro/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
+      <div class="bracelet-item" onclick="window.location.href='roleta/loja/micro/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'iPhone 15 Pro'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/m1.webp" style="height: 140px; width: auto;">
         </div>
