--- a/roleta/loja/index.html
+++ b/roleta/loja/index.html
@@ -125,7 +125,7 @@
     </nav>
     <img src="images/2310_hotsite_blackfriday2023_01%281%29.png" style="width: 100%; margin-top: -2px;">
     <div class="bracelet-grid">
-      <div class="bracelet-item" onclick="window.location.href = 'roleta/loja/jbl/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Boombox 3'});">
+      <div class="bracelet-item" onclick="window.location.href = '/loja/jbl/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'JBL Boombox 3'});">
         <div class="product-image" style="margin-bottom: 10px;">
           <img src="images/poco_preto.png" style="height: 140px; width: auto;">
         </div>
