--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 </label>
 
                 <label class="radiocontainer">
-                    Satander                   <input type="radio" name="difficulty5" value="moderadamente-precisa">
+                    Santander                   <input type="radio" name="difficulty5" value="moderadamente-precisa">
                    <span class="checkmark"></span>
                 </label>
 
