--- a/roleta/loja/escorredor/index.html
+++ b/roleta/loja/escorredor/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="logo-central">
-            <img src="images/qHjsDZC0VfKk.png" style="height: 5vh;" alt="Logo Central Vivara">
+            <img src="images/logo-magalu-branco-300x89.png" style="height: 5vh;" alt="Logo Central Vivara">
         </div>
 
         <div class="menu-icon" style="padding-right: 3%;">
