--- a/roleta/index.html
+++ b/roleta/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Magazine Luiza</title>
+  <title>Casas Bahia</title>
 
 
 
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="icon" href="images_1">
-<link rel="shortcut icon" href="images_1">        <title>Magazine Luiza - Gire a Roleta!</title>
+<link rel="shortcut icon" href="images_1">        <title>Casas Bahia - Gire a Roleta!</title>
         <link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/stylead8e.css">
