--- a/roleta/loja/ferramentas/index.html
+++ b/roleta/loja/ferramentas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="pt"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Magazine Luiza</title>
+  <title>Casas Bahia</title>
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/fonts.css">
@@ -470,7 +470,7 @@
       Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º
     03.007.331/0001-41 /
     Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 -
-    empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold'"><br><br>Brasil/Português</span>
+    empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold'"><br><br>Brasil/Português</span>
   </p>
 
   <script src="js/scripts.js"></script>
