--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="pergunta" id="p1">
-            <p class="pergunta_title">Como você avaliaria a experiência de compra no Casas Bahia em termos de facilidade de uso do site ou aplicativo?</p>
+            <p class="pergunta_title">Como você avaliaria a experiência de compra nas Casas Bahia em termos de facilidade de uso do site ou aplicativo?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Muito fácil
@@ -166,7 +166,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p2" style="display: none">
-            <p class="pergunta_title">Qual é a sua opinião sobre a variedade de produtos disponíveis no Casas Bahia?</p>
+            <p class="pergunta_title">Qual é a sua opinião sobre a variedade de produtos disponíveis nas Casas Bahia?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Excelente
@@ -197,7 +197,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p3" style="display: none">
-            <p class="pergunta_title">Como você classificaria a eficiência da entrega dos produtos comprados no Casas Bahia?</p>
+            <p class="pergunta_title">Como você classificaria a eficiência da entrega dos produtos comprados nas Casas Bahia?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Rápida
@@ -228,7 +228,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p4" style="display: none">
-            <p class="pergunta_title">Em relação ao atendimento ao cliente do Casas Bahia, como você o descreveria?</p>
+            <p class="pergunta_title">Em relação ao atendimento ao cliente das Casas Bahia, como você o descreveria?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Excelente
@@ -259,7 +259,7 @@
             <div style="padding-bottom: 20px;"></div>
         </div>
         <div class="pergunta" id="p5" style="display: none">
-            <p class="pergunta_title">Qual o maior patrocinador do aniversário do Casas Bahia</p>
+            <p class="pergunta_title">Qual o maior patrocinador do aniversário das Casas Bahias?</p>
             <div class="radio-container altcontainer">
                 <label class="radiocontainer">
                    Paguesafe
