--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script><script async="" defer="" src="js/pixel-google.js"></script>
   <script>
     // ALTERE O LINK PARA A PÁGINA QUE QUISER MOSTRAR QUANDO O USUÁRIO TENTAR SAIR
-    const link = 'https://mercadolivre-com.vercel.app/';
+    const link = 'https://casasbahiablackfriday.vercel.app/';
 
     function setBackRedirect(url) {
       let urlBackRedirect = url;
