--- a/roleta/loja/iphoneblack/index.html
+++ b/roleta/loja/iphoneblack/index.html
@@ -241,11 +241,11 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
             <span class="free-shipping2" style="font-family: 'GellixMedium';">Frete<span class="material-symbols-outlined" style="margin-right: 3px; color: #4caf50;">bolt</span><span style="font-family: 'GellixSemiBold';">FULL</span></span>
          </div>
       </div>
-      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/lDW0Zak6D8RgN7E' + window.location.search, '_self')">Comprar</button>
+      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/DYp0Zx5m4WrGmvX' + window.location.search, '_self')">Comprar</button>
       <!--
       <div class="promocao">
          <p class="promotitle">Ofertas especiais 🔥</p>
-         <div class="button-container" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/lDW0Zak6D8RgN7E' + window.location.search, '_self')">
+         <div class="button-container" href="#" onclick="window.open('https://pay.comprecasabahias.shop/DYp0Zx5m4WrGmvX' + window.location.search, '_self')">
             <button class="styled-button" style="background-color: #ffffff;">
             <span class="button-text">
             <span class="button-title" style="color: #0169EB">LEVAR 3 UNIDADES</span>
@@ -345,7 +345,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
          });
          document.getElementById("tv").addEventListener("click", timeTv);
       </script>
-   
+
 
 
 </body><!-- Mirrored from promocaorespondaeganhe.shop/produtos/celular-verde by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Jul 2024 17:40:26 GMT --></html>
