--- a/roleta/loja/jbl710/index.html
+++ b/roleta/loja/jbl710/index.html
@@ -99,11 +99,11 @@
             <span class="free-shipping2" style="font-family: 'GellixMedium';">Frete<span class="material-symbols-outlined" style="margin-right: 3px; color: #4caf50;">bolt</span><span style="font-family: 'GellixSemiBold';">FULL</span></span>
          </div>
       </div>
-      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/7vJOGYqm8p4GKXd' + window.location.search, '_self')">Comprar</button>
+      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/eApQgznmoedgEb7' + window.location.search, '_self')">Comprar</button>
       <!--
       <div class="promocao">
          <p class="promotitle">Ofertas especiais 🔥</p>
-         <div class="button-container" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/7vJOGYqm8p4GKXd + window.location.search, '_self')">
+         <div class="button-container" href="#" onclick="window.open('https://pay.comprecasabahias.shop/eApQgznmoedgEb7 + window.location.search, '_self')">
             <button class="styled-button" style="background-color: #ffffff;">
             <span class="button-text">
             <span class="button-title" style="color: #0169EB">LEVAR 3 UNIDADES</span>
@@ -202,7 +202,7 @@
          });
          document.getElementById("tv").addEventListener("click", timeTv);
       </script>
-   
+
 
 
 </body><!-- Mirrored from promocaorespondaeganhe.shop/produtos/caixa-de-som-2 by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Jul 2024 17:40:07 GMT --></html>
