--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Casas Bahia</title>
-  <script async="" src="js/fbevents.js"></script><script async="" src="js/fbevents_1.js"></script><script type="text/javascript" async="" src="js/events.js"></script><script type="text/javascript" async="" src="js/events_1.js"></script><script src="js/latest.js" data-utmify-prevent-subids="" async="" defer=""></script>
-  <script>
-    window.googlePixelId = "";
-    var a = document.createElement("script");
-    a.setAttribute("async", "");
-    a.setAttribute("defer", "");
-    a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel-google.js");
-    document.head.appendChild(a);
+  <script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
+
   </script><script async="" defer="" src="js/pixel-google.js"></script>
   <script>
     // ALTERE O LINK PARA A PÁGINA QUE QUISER MOSTRAR QUANDO O USUÁRIO TENTAR SAIR
