--- a/roleta/loja/poco/index.html
+++ b/roleta/loja/poco/index.html
@@ -85,7 +85,7 @@
 
     </div>
 
-    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/RmA83EDqyEpgPVp' + window.location.search, '_blank')">Comprar</button>
+    <button class="pergunta-botao" href="#" onclick="window.open('https://https://pay.comprecasabahias.shop/mwK436yL0jwgQ8b' + window.location.search, '_blank')">Comprar</button>
 
 
 
