--- a/roleta/loja/micro/index.html
+++ b/roleta/loja/micro/index.html
@@ -106,7 +106,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
             <img src="images/m1.webp" alt="Fralda Vista 1" style="border-radius: 15px;">
             <img src="images/m2.webp" alt="Fralda Vista 2" style="border-radius: 15px;">
             <img src="images/m3.webp" alt="Fralda Vista 3" style="border-radius: 15px;">
-            <img src="images/m4.webp" alt="Fralda Vista 4" style="border-radius: 15px;"> 
+            <img src="images/m4.webp" alt="Fralda Vista 4" style="border-radius: 15px;">
          </div>
       </section>
       <div class="product-info2">
@@ -117,11 +117,11 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
             <span class="free-shipping2" style="font-family: 'GellixMedium';">Frete<span class="material-symbols-outlined" style="margin-right: 3px; color: #4caf50;">bolt</span><span style="font-family: 'GellixSemiBold';">FULL</span></span>
          </div>
       </div>
-      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/v7R0glnWy47ZVr9' + window.location.search, '_self')">Comprar</button>
+      <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/JqoR32elxWdgVj5' + window.location.search, '_self')">Comprar</button>
       <!--
       <div class="promocao">
          <p class="promotitle">Ofertas especiais 🔥</p>
-         <div class="button-container" href="#" onclick="window.open('https://pay.seguro-mercadopagamentos.online/v7R0glnWy47ZVr9 + window.location.search, '_self')">
+         <div class="button-container" href="#" onclick="window.open('https://pay.comprecasabahias.shop/JqoR32elxWdgVj5 + window.location.search, '_self')">
             <button class="styled-button" style="background-color: #ffffff;">
             <span class="button-text">
             <span class="button-title" style="color: #0169EB">LEVAR 3 UNIDADES</span>
@@ -225,7 +225,7 @@ src="https://www.facebook.com/tr?id=1602243840706168&ev=PageView&noscript=1"
          });
          document.getElementById("tv").addEventListener("click", timeTv);
       </script>
-   
+
 
 
 </body><!-- Mirrored from promocaorespondaeganhe.shop/produtos/caixa-de-som-2 by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Jul 2024 17:40:07 GMT --></html>
