--- a/roleta/loja/escorredor/index.html
+++ b/roleta/loja/escorredor/index.html
@@ -91,7 +91,7 @@
 
     </div>
 
-    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/RmA83E5jBel3PVp')">Comprar Agora</button>
+    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/a9ArZM9rPWWZ7xj')">Comprar Agora</button>
 
 
 
@@ -142,7 +142,7 @@
 
 
         <div class="fixed-button">
-            <a href="https://pay.comprecasabahias.shop/RmA83E5jBel3PVp" target="_blank">
+            <a href="https://pay.comprecasabahias.shop/a9ArZM9rPWWZ7xj" target="_blank">
                 <span>COMPRAR AGORA</span>
             </a>
         </div>
