--- a/roleta/loja/ferramentas/index.html
+++ b/roleta/loja/ferramentas/index.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/BNjzgPnJP6XZM78' + window.location.search, '_blank')">
+  <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/YL9jZDNrm7lgp4q' + window.location.search, '_blank')">
     COMPRAR AGORA
   </button>
 
