--- a/roleta/loja/geladeira/index.html
+++ b/roleta/loja/geladeira/index.html
@@ -86,7 +86,7 @@
     </div>
 
 
-    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/nQ7kZ7zk1Ra30eJ">Comprar</button>
+    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/z0qn35q1l8E398m">Comprar</button>
 
 
 
