--- a/roleta/loja/index.html
+++ b/roleta/loja/index.html
@@ -198,7 +198,7 @@
             </span>
           </div>
           <span class="estoque estoque-verde">Restam 14 unidades</span>
-          <p class="product-name">Xiaome POCO X5 256GB <span style="font-family: 'GellixBold';">Blue</span>
+          <p class="product-name">Xiaomi POCO X5 256GB <span style="font-family: 'GellixBold';">Blue</span>
         </p></div>
       </div>
       <div class="bracelet-item" onclick="window.location.href='https://casasbahiablackfriday.vercel.app/roleta/loja/ferramentas/index.html' + window.location.search; fbq('track', 'ViewContent', {content_name: 'Apple Watch Series 9'});">
