--- a/roleta/loja/panela/index.html
+++ b/roleta/loja/panela/index.html
@@ -86,7 +86,7 @@
     </div>
 
 
-    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/5pjw3Ra8Porg2lQ">Comprar</button>
+    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/n1NLgw05dbM3MxE">Comprar</button>
 
 
 
