--- a/roleta/loja/poco/index.html
+++ b/roleta/loja/poco/index.html
@@ -59,7 +59,7 @@
 
 
 
-    <p class="title" style="margin-top: 05px;">XIAOME POCO x5 5G Global Dual SIM 256 GB Blue 8GB RAM<span style="font-family: 'GellixBold';"></span><br></p>
+    <p class="title" style="margin-top: 05px;">Xiaomi POCO x5 5G Global Dual SIM 256 GB Blue 8GB RAM<span style="font-family: 'GellixBold';"></span><br></p>
 
 
     <section class="product-display">
@@ -85,7 +85,7 @@
 
     </div>
 
-    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/mwK436yL0jwgQ8b' + window.location.search, '_blank')">Comprar</button>
+    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/JqoR32elxRagVj5' + window.location.search, '_blank')">Comprar</button>
 
 
 
