--- a/roleta/loja/ps5/index.html
+++ b/roleta/loja/ps5/index.html
@@ -84,7 +84,7 @@
     </div>
 
 
-    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/521rZJ52Poq3eaX">Comprar</button>
+    <button class="pergunta-botao" id="geladeira" redirect-link="https://pay.comprecasabahias.shop/N1nVZpOaVyo3lM6">Comprar</button>
 
 
 
