--- a/roleta/loja/samsung/index.html
+++ b/roleta/loja/samsung/index.html
@@ -151,7 +151,7 @@ src="https://www.facebook.com/tr?id=462728540093655&ev=PageView&noscript=1"
 
     </div>
 
-    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/DPXw3X5xPk8Zzmp' + window.location.search, '_blank')">Comprar</button>
+    <button class="pergunta-botao" href="#" onclick="window.open('https://pay.comprecasabahias.shop/KV603kPJErEZw8y' + window.location.search, '_blank')">Comprar</button>
 
 
 
