--- a/roleta/loja/tv/index.html
+++ b/roleta/loja/tv/index.html
@@ -56,7 +56,7 @@
 
 
 
-    <p class="title" style="margin-top: 10px;">Smart TV 43 polegadas Led Android Com Wi-fi Dolby Philco</p>
+    <p class="title" style="margin-top: 10px;">Smart TV 55 polegadas Led Android Com Wi-fi Dolby Philco</p>
 
 
     <section class="product-display">
@@ -84,7 +84,7 @@
     </div>
 
 
-    <button class="pergunta-botao" id="tv" redirect-link="https://pay.comprecasabahias.shop/6YQPgjOR7Jq3pxz">Comprar</button>
+    <button class="pergunta-botao" id="tv" redirect-link="https://pay.comprecasabahias.shop/65XDZBn7MORZVJw">Comprar</button>
 
 
 
